--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,7 +41,7 @@ jobs:
   other:
     runs-on: ubuntu-latest
     needs: [plan, deploy]
-    name: Deploy TF
+    name: Do other things
     if: always() && needs.plan.result == 'success' && (needs.deploy.result == 'success' || needs.deploy.result == 'skipped')
     steps:
       - name: Deploy TF
