--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,8 +18,7 @@ jobs:
         id: plan_tf
         run: |
           echo "Planning things"
-          (exit $EXIT_CODE)
-          exit_code=$?
+          (exit $EXIT_CODE); exit_code=$?
           if [ "$exit_code" -eq 0 ]; then
             echo "No changes."
             exit 0
