--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Plan TF
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Run with specific exit code
         id: plan_tf
         run: |
