fix: separate the steps?

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,21 +16,26 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Run with specific exit code
-        id: plan_tf
+      - name: Terraform Plan
+        id: plan
         run: |
           echo "Planning things"
           ./mock-terraform.sh ${{ github.event.inputs.exit_code }}
+        continue-on-error: true
+
+      - name: Run with specific exit code
+        id: plan_tf
+        run: |
           code=$?
           if [ "$code" -eq 0 ]; then
-            echo "No changes."
-            exit 0
+          echo "No changes."
+          exit 0
           elif [ "$code" -eq 2 ]; then
-            echo "Changes present."
-            exit 0
+          echo "Changes present."
+          exit 0
           else
-            echo "Terraform error."
-            exit 1
+          echo "Terraform error."
+          exit 1
           fi
           echo "tfplan_exit=$code" >> $GITHUB_OUTPUT
     outputs:
