--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,9 @@ jobs:
     if: always() && needs.plan.result == 'success' && (needs.deploy.result == 'success' || needs.deploy.result == 'skipped')
     steps:
       - name: Deploy TF
+        env:
+          OUTPUT1: ${{needs.plan.outputs.exit_code}}
         id: deploy_tf
         run: |
-          echo "Output from previous job was: ${{needs.plan.outputs.exit_code}}" 
+          echo "Output from previous job was: $OUTPUT1" 
           echo "Deploying things"
