--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           echo "Planning things"
           ./mock-terraform.sh ${{ github.event.inputs.exit_code }}
-          echo "tfplan_exit=$?" >> "$GITHUB_OUTPUT"
+          echo "tfplan_exit=${{ github.event.inputs.exit_code }}" >> "$GITHUB_OUTPUT"
         continue-on-error: true
     outputs:
       exit_code: ${{ steps.plan.outputs.tfplan_exit }}
